fix(slideout-stack): Fix slideout z-index

--- a/projects/slideout-stack/src/theme/styles.scss
+++ b/projects/slideout-stack/src/theme/styles.scss
@@ -1,6 +1,6 @@
 .backdrop,
 .slideout {
-  z-index: 99999;
+  z-index: 10;
 }
 
 .backdrop {
